// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`episode collection > should get episodes 1`] = `
Object {
  "error": "Not Found",
  "message": "Route GET:/collections/subjects/2703/episodes?limit=2&offset=0 not found",
  "statusCode": 404,
}
`;

exports[`episode collection > should get single episode 1`] = `
Object {
  "error": "Not Found",
  "message": "Route GET:/collections/subjects/-/episodes/17227 not found",
  "statusCode": 404,
}
`;
